Fix schema for PostgreSQL, align path filter on dashboard
The path filter was aligned to the left if the string for the
checkboxes underneath it is much longer than the default English text.

--- a/public/backend.css
+++ b/public/backend.css
@@ -242,7 +242,7 @@ tr.target .chart-left { display: block; }
              background-color: #f8f8d9; border: 1px solid #dede89; border-radius: 2px; }
 #dash-main input[type="text"]     { padding: .3em; }
 #dash-main input[type="checkbox"] { vertical-align: middle; }
-#filter-paths                     { width: 18.5em; display: block; }
+#filter-paths                     { width: 18.5em; display: block; margin-left: auto; }
 #dash-main .date-input            { width: 9em; text-align: center; }
 
 .filter-wrap                 { position: relative; text-align: right; }
